# olivera_engine

./: .gitignore  CMakeLists.txt  Olivera_EngineUML (2).dia  Olivera_EngineUML.dia  README.md  Report.docx
Release/: olivera.lib
doxygen/html/: _box_collider_8h_source.html  _camera_context_8h_source.html  _collision_8h_source.html  _component_8h_source.html  _core_8h_source.html  _current_camera_8h_source.html  _entity_8h_source.html  _environment_8h_source.html  _input_manager_8h_source.html  _keyboard_8h_source.html  _light_8h_source.html  _materials_8h_source.html  _mesh_8h_source.html  _mesh_renderer_8h_source.html  _model_8h_source.html  _mouse_8h_source.html  _post_processing_8h_source.html  _resource_8h_source.html  _resource_manager_8h_source.html  _shader_program_8h_source.html  _shadows_8h_source.html  _shadows_f_b_o_8h_source.html  _sound_8h_source.html  _sound_source_8h_source.html  _static_model_collider_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _vertex_array_8h_source.html  annotated.html  class_box_collider-members.html  class_box_collider.html  class_static_model_collider-members.html  class_static_model_collider.html  classes.html  classolivera_1_1_camera_context-members.html  classolivera_1_1_camera_context.html  classolivera_1_1_collision-members.html  classolivera_1_1_collision.html  classolivera_1_1_component-members.html  classolivera_1_1_component.html  (+100 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  (+38 more)
doxygen/latex/: annotated.tex  class_box_collider.tex  class_static_model_collider.eps  class_static_model_collider.tex  classolivera_1_1_camera_context.tex  classolivera_1_1_collision.eps  classolivera_1_1_collision.tex  classolivera_1_1_component.eps  classolivera_1_1_component.tex  classolivera_1_1_core.tex  classolivera_1_1_current_camera.tex  classolivera_1_1_entity.tex  classolivera_1_1_environment.tex  classolivera_1_1_input_manager.eps  classolivera_1_1_input_manager.tex  classolivera_1_1_keyboard.tex  classolivera_1_1_light.eps  classolivera_1_1_light.tex  classolivera_1_1_materials.eps  classolivera_1_1_materials.tex  classolivera_1_1_mesh.tex  classolivera_1_1_mesh_renderer.eps  classolivera_1_1_mesh_renderer.tex  classolivera_1_1_model.eps  classolivera_1_1_model.tex  classolivera_1_1_mouse.tex  classolivera_1_1_post_processing.tex  classolivera_1_1_resource.eps  classolivera_1_1_resource.tex  classolivera_1_1_resource_manager.tex  classolivera_1_1_shader_program.eps  classolivera_1_1_shader_program.tex  classolivera_1_1_shadows.eps  classolivera_1_1_shadows.tex  classolivera_1_1_shadows_f_b_o.tex  classolivera_1_1_sound.eps  classolivera_1_1_sound.tex  classolivera_1_1_sound_source.eps  classolivera_1_1_sound_source.tex  classolivera_1_1_texture.eps  (+16 more)
resources/objects/: CollisionBox.data  ColorBox.data  LightBox.data  TexturedCube.data  cube.data  framebufferScreen.data  skyboxMesh.data  triangle.data
resources/objects/Room/: Rom.mtl  Room.mtl  low poly room.blend
resources/objects/unityAssets/: Bed.blend  Bed.blend1  NiceRoom.blend  NiceRoom.mtl  Plane.mtl  magic.mtl
resources/shaders/: Blinn-PhongShader.txt  Blinn-PhongShadows.txt  CollisionBoxShader.txt  DepthShader.txt  LightBox.frag  LightBox.vert  TextureShader.frag  TextureShader.vert  cube.vert  cubeShader.txt  debugDepthQuad.txt  framebufferBlurScreen.txt  framebufferScreen.frag  nanousitShader.txt  pointLShadows.txt  postProcessingShader.txt  simple.frag  simple.vert  simpleDepthShader.txt  skyboxShader.txt  textureCubeShader.txt
resources/shaders/VertFragFiles/: Blinn-PhongShadows.frag  Blinn-PhongShadows.vert  Blinn-PhongTextured.frag  Blinn-PhongTextured.vert  CollisionBoxShader.frag  CollisionBoxShader.vert  TextureShader.frag  cube.frag  framebufferBlurScreen.frag  framebufferScreen.frag  pointLShadows.frag  pointLShadows.vert  pointLShadowsDepth.frag
src/TestScreen/: BoxInputManager.cpp  BoxInputManager.h  CameraInputManager.cpp  CameraInputManager.h  FPSCamera.cpp  FPSCamera.h  Flashlight.cpp  Flashlight.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  LowPoly.cpp  LowPoly.h  RoomDemo.cpp  RoomDemo.h  SoundInputManager.cpp  SoundInputManager.h  main.cpp
src/core/: Core.cpp
src/olivera/: BoxCollider.cpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraContext.cpp  CameraContext.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Context.cpp  Context.h  Core.cpp  Core.h  CurrentCamera.cpp  CurrentCamera.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.cpp  Exception.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Loader.cpp  Loader.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Mouse.cpp  (+40 more)
src/olivera/SavingTheseForLater/: Camera.cpp  Camera.h
src/sr1/: zero_initialized
